# Dynamometervogn

./: CMakeLists.txt  README.md
Arduino/: arduino.md
Arduino/Dynamometer/: Dynamometer.ino
Arduino/Manometer/: Manometer.ino
Arduino/Odometer/: Odometer.ino
Arduino/Pressure_cell/: Pressure_cell.ino
Arduino/Weight_cell/: Weight_cell.ino
Arduino/libraries/HX711_ADC/src/: HX711_ADC.cpp  config.h
Datasporing/: CMakeLists.txt
Datasporing/src/: Data_entry.cpp  Data_entry.h  Datasporing.cpp  Datasporing.h  Time_series.cpp  Time_series.h  main.cpp
Dynamometer/: CMakeLists.txt  README.md
Dynamometer/src/: Dynamometer.cpp  Dynamometer.h  My_area.cpp  My_window.cpp  My_window.h  My_worker.cpp  My_worker.h  Vognkontroller.cpp  Vognkontroller.h
Dynamometerhub/: CMakeLists.txt  README.md
Dynamometerhub/src/: Dynamometerhub.cpp  Dynamometerhub.h
Explore_HID_host/: CMakeLists.txt  README.md
Explore_HID_host/src/: main.cpp
Explore_gtkmm/: CMakeLists.txt
Explore_sense_HAT/: CMakeLists.txt
Explore_sense_HAT/src/: Frame_buffer.cpp  Frame_buffer.h  Snake.cpp  Snake.h  Target_focus.cpp  Target_focus.h  main.cpp
Vognkontroller/: CMakeLists.txt  README.md
Vognkontroller/src/: My_HID_controller.cpp  My_HID_controller.h  My_area.cpp  My_area.h  My_definitions.h  My_display.cpp  My_display.h  My_filelogger.cpp  My_filelogger.h  My_window.cpp  My_window.h  My_worker.cpp  My_worker.h  Vognkontroller.cpp  Vognkontroller.h
